--- a/src/sidebar/functions.scss
+++ b/src/sidebar/functions.scss
@@ -28,11 +28,7 @@
   @return if(
     $index,
     str-slice($string, 1, $index - 1) + $replace +
-      str-replace(
-        str-slice($string, $index + str-length($search)),
-        $search,
-        $replace
-      ),
+      str-replace(str-slice($string, $index + str-length($search)), $search, $replace),
     $string
   );
 }
