--- a/public/fonts/lato.css
+++ b/public/fonts/lato.css
@@ -3,7 +3,13 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local('Lato Regular'), local('Lato-Regular'),
-    url('chrome-extension://__MSG_@@extension_id__/fonts/lato-400.woff2')
-      format('woff2');
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/lato-400.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/lato-700.woff2') format('woff2');
 }
