--- a/src/background/styles/main.scss
+++ b/src/background/styles/main.scss
@@ -6,6 +6,7 @@
 @import 'components/bookmark.scss';
 @import 'components/resizer.scss';
 @import 'components/modal.scss';
+@import 'components/toast.scss';
 
 @import 'form/input.scss';
 @import 'form/select.scss';
