change color of active bookmark icon - update changelog

--- a/src/background/styles/components/bookmark.scss
+++ b/src/background/styles/components/bookmark.scss
@@ -30,7 +30,7 @@
       width: 0.5em;
       line-height: 0.5em;
       text-align: center;
-      color: #00cdcd;
+      color: var(--primary-color-lighter);
     }
   }
   &__icon {
