--- a/src/background/styles/layout/base.scss
+++ b/src/background/styles/layout/base.scss
@@ -58,7 +58,12 @@
     @include darkTheme();
   }
 
-  --primary-color-gradient: linear-gradient(45deg, hsl(231, 99%, 59%), hsl(218, 100%, 58%));
+  --primary-color-lighter: hsl(218, 100%, 58%);
+  --primary-color-gradient: linear-gradient(
+    45deg,
+    hsl(231, 99%, 59%),
+    var(--primary-color-lighter)
+  );
 
   --font-hs: var(--font-h), var(--font-s);
   --font-hsl: var(--font-hs), var(--font-l);
