make new tab page optional

--- a/src/background/styles/main.scss
+++ b/src/background/styles/main.scss
@@ -11,4 +11,5 @@
 @import 'form/input.scss';
 @import 'form/select.scss';
 @import 'form/radio-checkbox.scss';
+@import 'form/checkbox.scss';
 @import 'form/button.scss';
